fix some overflow in the sidebar

--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -31,3 +31,6 @@ aside {
 		}
 	}
 }
+#orin-container aside ul {
+	overflow: hidden;
+}
